<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ProjetAndroidActivity!</string>
    <string name="app_name">ProjetAndroid</string>
    <string name="scan_parcel">Scanner un colis</string>
    <string name="show_list">Afficher la liste de livraison</string>
    <string name="leave">Quitter</string>
    <string name="validate">Valider</string>
    <string name="accept_parcel">Accepter</string>
    <string name="deny_parcel">Refuser</string>
    <string name="absent">Absent</string>
    <string name="comments">Commentaires : </string>
    <string name="erase">Effacer</string>
    <string name="cancel">Annuler</string>
    <string name="cellphone">Téléphone : </string>
    <string name="city">Ville : </string>
    <string name="postalcode">CP : </string>
    <string name="address">Adresse : </string>
    <string name="name">Nom Prénom : </string>
    <string name="info_delivery">Informations Livraison : </string>
    <string name="dest">Destinataire : </string>
    <string name="exp">Expéditeur : </string>
    <string name="number_parcel">Nombre de colis : </string>
    <string name="add_exp">Ajout d\' expéditeur :  </string>
    <string name="collect">Coli(s) collecté(s)</string>
</resources>