<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="13"
    android:background="@drawable/background" 
    android:paddingTop="85dp"
    android:paddingBottom="40dp"
    android:paddingLeft="27dp"
    android:paddingRight="28dp">

    <TextView
        android:id="@+id/details_exp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:text=""
        android:textColor="#6d6d6d" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:text="@string/comments"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/comments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/accept_parcel"
            android:textSize="13dp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/accept_parcel"
            android:layout_marginRight="10dp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/deny_parcel"
            android:textSize="13dp"
            android:layout_width="80dp"
            android:layout_height="wrap_content" 
            android:text="@string/deny_parcel"
            android:layout_marginRight="10dp"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/absent"
            android:textSize="13dp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/absent"
            android:layout_gravity="center" />

    </LinearLayout>

</LinearLayout>